--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@slnckyami/V3-Baileys",
-  "version": "1.0.2",
+  "name": "CorzzaDev-Baileys",
+  "version": "1.0.0",
   "description": "WhatsApp Beta",
   "keywords": [
     "whatsapp",
